@@ -45,6 +45,8 @@ Version 1.5.6+svn:
    * Improved wrapping in the new widgets.
    * Improved easy close handling.
    * Added a horizontal scrollbar widget.
+   * Made the border scrolling threshold a (hidden) preference and made it
+     default to 10 instead of 5 pixels.
  * WML engine:
    * Added the 'round' key to [set_variable].
    * It is possible to override the end-of-campaign screen text
